--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ thumbnail:          "/img/header.png"
 instagram_username: instagram_username
 facebook_username:  soozyy
 
+  # 블로그 disqus shortname
+disqus:
+shortname: sujilog-com
 
 # Build settings
 markdown:           kramdown
